tests/ui/not_send.stderr
error[E0277]: `*mut clarax::Python<'static>` cannot be shared between threads safely
 --> tests/ui/not_send.rs:4:15
  |
4 |     py.detach(|| { drop(py); });
  |        ------ ^^^^^^^^^^^^^^^^ `*mut clarax::Python<'static>` cannot be shared between threads safely
  |        |
  |        required by a bound introduced by this call
  |
  = help: within `clarax::Python<'_>`, the trait `Sync` is not implemented for `*mut clarax::Python<'static>`
note: required because it appears within the type `PhantomData<*mut clarax::Python<'static>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `clarax::marker::NotSend`
 --> src/marker.rs
  |
  | struct NotSend(PhantomData<*mut Python<'static>>);
  |        ^^^^^^^
note: required because it appears within the type `PhantomData<clarax::marker::NotSend>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `clarax::Python<'_>`
 --> src/marker.rs
  |
  | pub struct Python<'py>(PhantomData<&'py AttachGuard>, PhantomData<NotSend>);
  |            ^^^^^^
  = note: required for `&clarax::Python<'_>` to implement `Send`
note: required because it's used within this closure
 --> tests/ui/not_send.rs:4:15
  |
4 |     py.detach(|| { drop(py); });
  |               ^^
  = note: required for `{closure@$DIR/tests/ui/not_send.rs:4:15: 4:17}` to implement `Ungil`
note: required by a bound in `clarax::Python::<'py>::detach`
 --> src/marker.rs
  |
  |     pub fn detach<T, F>(self, f: F) -> T
  |            ------ required by a bound in this associated function
  |     where
  |         F: Ungil + FnOnce() -> T,
  |            ^^^^^ required by this bound in `Python::<'py>::detach`
